--- a/static/index.html
+++ b/static/index.html
@@ -18,13 +18,13 @@
     </main>
 
     <nav>
-        PlaceHolder
     </nav>
 
     <script src="element/singleMem.js"></script>
     <script src="element/MemeViewer.js"></script>
+    <script src="element/UploadMeme.js"></script>
     <script src="gesture.js"></script>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html>
