--- a/static/index.html
+++ b/static/index.html
@@ -20,9 +20,11 @@
     <nav>
     </nav>
 
+    <script src="Communication.js"></script>
     <script src="element/singleMem.js"></script>
     <script src="element/MemeViewer.js"></script>
     <script src="element/UploadMeme.js"></script>
+    <script src="element/UserViewer.js"></script>
     <script src="gesture.js"></script>
     <script src="main.js"></script>
 
