--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+          integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+          crossorigin=""/>
     <title>MeetByMeme</title>
 </head>
 <body>
@@ -13,6 +16,7 @@
     <header>
         <h1> MeetByMemes </h1>
     </header>
+    <div id="map"></div>
 
     <main>
     </main>
@@ -20,11 +24,16 @@
     <nav>
     </nav>
 
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+            crossorigin=""></script>
     <script src="Communication.js"></script>
     <script src="element/singleMem.js"></script>
     <script src="element/MemeViewer.js"></script>
     <script src="element/UploadMeme.js"></script>
     <script src="element/UserViewer.js"></script>
+    <script src="element/NearByViewer.js"></script>
     <script src="gesture.js"></script>
     <script src="main.js"></script>
 
